# rootstock-defi-mcp-server

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_server.py
src/: __init__.py  config.py  dependencies.py  server.py
src/application/: __init__.py  get_lending_rates.py  get_stablecoin_health.py  get_token_prices.py
src/domain/: __init__.py
src/domain/lending/: __init__.py  models.py  ports.py  services.py
src/domain/pricing/: __init__.py  models.py  ports.py  services.py
src/domain/shared/: __init__.py  exceptions.py  models.py  ports.py
src/infrastructure/: __init__.py  factory.py
src/infrastructure/blockchain/: __init__.py  constants.py  contracts.py  gateway.py
src/infrastructure/providers/: __init__.py
src/infrastructure/providers/lending/: __init__.py  sovryn_provider.py  tropykus_provider.py
src/infrastructure/providers/pricing/: __init__.py  _amm_helper.py  moc_price_provider.py  roc_price_provider.py  sovryn_amm_provider.py
src/middleware/: __init__.py
src/security/: __init__.py
src/tools/: __init__.py  lending_rates.py  stablecoin_health.py  token_prices.py
tests/: conftest.py
tests/integration/: test_factory.py  test_tools.py
tests/unit/: test_config.py  test_use_cases.py
tests/unit/domain/: test_lending_service.py  test_models.py  test_pricing_service.py
tests/unit/infrastructure/: test_contracts.py  test_factory.py  test_gateway.py  test_moc_provider.py  test_roc_provider.py  test_sovryn_provider.py  test_tropykus_provider.py
tests/unit/tools/: test_lending_rates_tool.py  test_stablecoin_health_tool.py
