[project]
name = "rootstock-defi-mcp-server"
version = "0.0.1"
description = "MCP server for on-chain DeFi analysis on Rootstock (RSK)"
readme = "README.md"
authors = [
    { name = "Pau MB", email = "pau.amravi@totbits.es" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "web3>=7.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "cryptography>=42.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "pre-commit>=3.6.0",
]

[project.scripts]
rootstock-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff ---
[tool.ruff]
target-version = "py313"
line-length = 120

exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (seguridad)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]

ignore = [
    "S101",   # assert en tests OK
    "S311",   # random OK para IDs, no para crypto
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ARG002"]
"src/infrastructure/blockchain/contracts.py" = ["S105"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

# --- MyPy ---
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# --- Pytest ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
timeout = 10
markers = [
    "security: security-specific tests",
    "slow: slow tests",
]

# --- Coverage ---
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# --- Bandit ---
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
